# good-commit-message

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: ci.yaml
gcm/: __init__.py  check_commit.py  check_commit_message.py
tests/: conftest.py  test_check_commit.py
tests/data/: COMMIT_MSG_BAD  COMMIT_MSG_COMMENTS  COMMIT_MSG_GOOD
