[tool.poetry]
name = "gcm"
version = "0.3.0"
description = "A commit-msg Git hook to enforce good commit messages"
authors = ["Don B. Fox <dfox09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"
flake8 = "4.0.1"
tox = "3.25"
tox-gh-actions = "2.9.1"

[tool.poetry.scripts]
check-commit-message = "gcm.check_commit_message:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 88

[tool.coverage.report]
exclude_lines = ["if __name__ == ['\"]__main__['\"]", "def cli"]
